swagger 配置
